2001-03-17  Gary Houston  <ghouston@arglist.com>

	* sort.c (scm_sort): move sortvec variable to avoid a compiler
	warning	when HAVE_ARRAYS is not defined.  move len too.

	* Makefile.am (DOT_X_FILES): remove net_db.x, posix.x, socket.x.
	(EXTRA_DOT_X_FILES): let configure set the value.
	(DOT_DOC_FILES): remove net_db.doc, posix.doc, socket.doc.

	* gc.c (scm_must_malloc): changed the comment explaining when
	scm_must variants of malloc/free etc., should be used, based on
	explanation from Dirk Herrmann.
	* fports.c (scm_fport_buffer_add): use FUNC_NAME instead of a local
	string with procedure name.  use scm_must_malloc instead of malloc.
	(scm_setvbuf, scm_fdes_to_port, fport_close): use scm_must variants
	of malloc/free.
	* ports.c (scm_add_to_port_table, scm_remove_from_port_table,
	scm_ungetc): use scm_must variants of malloc/realloc/free.
	(scm_add_to_port_table, scm_ungetc): define FUNC_NAME.

2001-03-17  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* __scm.h (SCM_ASSERT, SCM_WTA_DISPATCH_0, SCM_WTA_DISPATCH_1,
	SCM_WTA_DISPATCH_2, SCM_WTA_DISPATCH_n):  Don't call scm_wta, call
	scm_wrong_type_arg instead.

	(SCM_WNA):  Deprecated.

	* error.[ch] (scm_wta):  Deprecated.

	* numbers.c (s_i_log):  Minor comment fix.

	* read.c (scm_lreadr), unif.c (scm_aind, scm_shap2ra,
	scm_make_shared_array, scm_transpose_array, scm_enclose_array,
	scm_array_in_bounds_p): Don't use SCM_ASSERT to check for
	wrong-num-args or misc errors.

	* unif.c (scm_make_shared_array, scm_transpose_array,
	scm_enclose_array, scm_array_in_bounds_p, scm_array_set_x):
	Validate the rest argument (note: this is only done when guile is
	built with SCM_DEBUG_REST_ARGUMENT=1)

	(scm_array_in_bounds_p, scm_uniform_vector_ref, scm_array_set_x):
	Replace calls to scm_wrong_num_args by SCM_WRONG_NUM_ARGS.

	* validate.h (SCM_FUNC_NAME, SCM_VALIDATE_NUMBER_COPY,
	SCM_VALIDATE_NUMBER_DEF_COPY):  Deprecated.

2001-03-17  Dirk Herrmann  <D.Herrmann@tu-bs.de>
